# python-template

./: .gitignore  README.md  pyproject.toml
python_template/: foo.py  main.py
python_template/tests/: test_foo.py
